--- a/Public/admin/css/login.css
+++ b/Public/admin/css/login.css
@@ -1,9 +1,14 @@
+html,body{
+	width: 100%;
+	height:100%;
+	background: aliceblue
+}
 .header{
 	text-align: center;
 	margin: 0 0 50px 0;
 }
 .login_con{
-	margin-top: 20%;
+	padding-top: 20%;
 }
 form{
 	text-align: center;
