--- a/app/Admin/View/article/index.html
+++ b/app/Admin/View/article/index.html
@@ -17,9 +17,8 @@
 		<h2>光电技术实验中心后台</h2>
 		<div class="info-con">
 			<ul class="clear">
-				<li>222 |</li>
-				<li>222 |</li>
-				<li>222 </li>
+				<li>{$name} |</li>
+				<li id="logout">退出 </li>
 			</ul>
 		</div>
 	</header>
@@ -35,25 +34,65 @@
 			</div>
 			<div class="col-xs-10 right-con">
 				<div class="article_con">
-					<volist name="article_list" id='vo_b'>
-						<div>
-							{$vo_b["id"]} <br>
-							{$vo_b["title"]} <br>
-							{$vo_b["content"]} <br>
-							{$vo_b["sendtime"]} <br>
-
+				<!--div class="search_div">
+					<input type="text" value="" placeholder="请输入文章标题">
+					<span id="search">搜索</span>
+				</div-->
+				<volist name="article_list" id='vo_b'>
+					<div class="article_div">
+						<div class="article_h_msg">
+							<span class="article_id">ID:{$vo_b["id"]}</span>
+							<span class="article_title">文章标题:{$vo_b["title"]}
+							</span>
+							<span class="delete_article">
+								删除
+							</span>
 						</div>
-					</volist>
-					<div class="page">{$article_page}</div>
-				</div>
+						<div class="article_content">{$vo_b["content"]}
+						</div>
+						<div class="sendtime">{$vo_b["sendtime"]}
+						</div> 
+
+					</div>
+				</volist>
+				<div class="page">{$article_page}</div>
 			</div>
 		</div>
 	</div>
-	<footer class="footer">
-		IP:0000000
-	</footer>
-	
+</div>
+<footer class="footer">
+	IP:0000000
+</footer>
+
 </body>
 <script>
+	$(function(){
+		$(document).on("click",'.delete_article',function(){
+			var r = confirm("确定删除文章？")
+			if (r) {
+				var id = $(this).parent().find(".article_id").text().replace("ID:",'').trim();
+				$.post('__URL__/delete',{"id":id},function(data){
+					var dt = eval("("+data+")");
+					console.log(dt)
+					alert(dt.msg);
+					location.reload();
+				})
+
+			}
+		})
+
+		$(document).on("click",'#logout',function(){
+			var r = confirm("确定退出？");
+			if (r) {
+				$.post('__ROOT__/Admin/Index/logout',{},function(data){
+					var dt = eval("("+data+")");
+					if (dt.code===0) {
+						console.log(dt)
+						window.location = '__ROOT__/Admin/login'
+					}
+				})
+			}
+		})
+	})
 </script>
 </html>
