--- a/app/Admin/View/index/index.html
+++ b/app/Admin/View/index/index.html
@@ -104,7 +104,8 @@
 		$(document).on("click",'.config_delete',function(){
 			var r = confirm("确定删除？");
 			if (r) {
-				var id = $(this).parent().attr("id");
+				var id = parseInt($(this).parent().parent().attr("id"),10);
+				console.log(id)
 				$.post('__URL__/delConfig',{"id":id},function(data){
 					console.log(data);
 					var dt = eval("("+data+")");
